--- a/amxlib/amxlib.vcxproj.filters
+++ b/amxlib/amxlib.vcxproj.filters
@@ -21,13 +21,22 @@
     <ClCompile Include="amxaux.c">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="amxcore.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="amxcons.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="amx.h">
-      <Filter>Source Files</Filter>
+      <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="amxaux.h">
-      <Filter>Source Files</Filter>
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="amxcons.h">
+      <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
