--- a/amxTester/amxTester.vcxproj.filters
+++ b/amxTester/amxTester.vcxproj.filters
@@ -15,25 +15,19 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="amx.c">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="amxaux.c">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="dllmain.c">
-      <Filter>Source Files</Filter>
-    </ClCompile>
+    <ClInclude Include="stdafx.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="targetver.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="amx.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="amxaux.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="osdefs.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
+    <ClCompile Include="stdafx.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="amxTester.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
