--- a/win32console/win32console.vcxproj.filters
+++ b/win32console/win32console.vcxproj.filters
@@ -15,25 +15,8 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="amx.c">
+    <ClCompile Include="win32console.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="amxaux.c">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="dllmain.c">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-  </ItemGroup>
-  <ItemGroup>
-    <ClInclude Include="amx.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="amxaux.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="osdefs.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
   </ItemGroup>
 </Project>
