Include default console and core natives

--- a/amxlib/amxlib.vcxproj
+++ b/amxlib/amxlib.vcxproj
@@ -21,6 +21,8 @@
   <ItemGroup>
     <ClCompile Include="amx.c" />
     <ClCompile Include="amxaux.c" />
+    <ClCompile Include="amxcons.c" />
+    <ClCompile Include="amxcore.c" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="amx.h" />
