--- a/RagePawn/RagePawn.vcxproj.filters
+++ b/RagePawn/RagePawn.vcxproj.filters
@@ -29,5 +29,8 @@
     <ClInclude Include="main.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="PlayerNatives.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
