more work on format function

--- a/amxlib/amxlib.vcxproj
+++ b/amxlib/amxlib.vcxproj
@@ -23,6 +23,7 @@
     <ClCompile Include="amxaux.c" />
     <ClCompile Include="amxcons.c" />
     <ClCompile Include="amxcore.c" />
+    <ClCompile Include="amxstring.c" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="amx.h" />
