--- a/amxlib/amxlib.vcxproj.filters
+++ b/amxlib/amxlib.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClCompile Include="amxcore.c">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="amxstring.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="amx.h">
