--- a/amxlib/amxlib.vcxproj
+++ b/amxlib/amxlib.vcxproj
@@ -20,15 +20,33 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="amx.c" />
+    <ClCompile Include="amxargs.c" />
     <ClCompile Include="amxaux.c" />
     <ClCompile Include="amxcons.c" />
     <ClCompile Include="amxcore.c" />
+    <ClCompile Include="amxdgram.c" />
+    <ClCompile Include="amxfile.c" />
+    <ClCompile Include="amxfixed.c" />
+    <ClCompile Include="amxfloat.c" />
+    <ClCompile Include="amxgc.c" />
+    <ClCompile Include="amxpool.c" />
+    <ClCompile Include="amxprocess.c" />
     <ClCompile Include="amxstring.c" />
+    <ClCompile Include="amxtime.c" />
+    <ClCompile Include="fpattern.c" />
+    <ClCompile Include="minIni.c" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="amx.h" />
     <ClInclude Include="amxaux.h" />
     <ClInclude Include="amxcons.h" />
+    <ClInclude Include="amxgc.h" />
+    <ClInclude Include="amxpool.h" />
+    <ClInclude Include="amxtime.h" />
+    <ClInclude Include="fpattern.h" />
+    <ClInclude Include="minGlue.h" />
+    <ClInclude Include="minIni.h" />
+    <ClInclude Include="osdefs.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>15.0</VCProjectVersion>
@@ -100,9 +118,9 @@
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <SDLCheck>true</SDLCheck>
-      <PreprocessorDefinitions>_DEBUG;_LIB;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>_CRT_SECURE_NO_WARNINGS;_DEBUG;_LIB;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>D:\pawn\amx;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
